<resources>
    <string name="app_name">Churrasco</string>
    <string name="Salvar">Salvar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Pessoa">Pessoa</string>
    <string name="churrasco">Churrasco</string>
    <string name="excluir">Excluir</string>
    <string name="adicionar">Adicionar</string>
    <string name="Churrasco">Churrasco</string>
    <string name="PrecoCarne"> Preço da Carne:</string>
    <string name="precoBebida"> Preço da Bebida:</string>
    <string name="Pessoas">Pessoas</string>
    <string name="Nome">Nome</string>
    <string name="Comer" >Comer</string>
    <string name="Sim">Sim</string>
    <string name="Nao">Não</string>
    <string name="Bebida">Bebida</string>
    <string name="deseja_apagar">Deseja realmente apagar</string>
    <string name="Aviso">Aviso</string>
    <string name="confirmacao">Confirmação</string>
    <string name="alterar_pessoa">Alterar pessoa</string>
    <string name="nova_pessoa">Nova pessoa</string>
    <string name="nome_vazio">Nome está vazio!</string>
    <string name="novo_churrasco">Novo Churrasco</string>
    <string name="adicionar_pessoas">Adicionar Pessoas</string>
    <string name="nome_curso">Engenharia de Software</string>
    <string name="Curso">Curso</string>
    <string name="textRA">1706292</string>
    <string name="RA">RA</string>
    <string name="nome_autor">Gabriel Yukio Takazaki</string>
    <string name="autor">Autor</string>
    <string name="sobre">Sobre</string>
    <string name="total">Total :</string>
    <string name="musica">Escreva suas musicas</string>
</resources>
